More JSF UI Component Tests